--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</script>
 
 		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<!-- <link rel="stylesheet" href="lib/css/zenburn.css"> -->
 
 		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
