--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-        <section data-markdown="session.md" data-vertical="^\n\n" data-separator="^\n-{4,}" data-notes="^Note:"></section>
+        <section data-markdown="session.md" data-separator-vertical="^\n\n" data-separator="^\n-{4,}" data-notes="^Note:"></section>
 			</div>
 
 		</div>
