SVGInjector: install library explicitly; wait for reveal before loading
- Wait for reveal to be ready before triggering injector library
- Use SVGInjector library directly instead of through a npm-installed package.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 		</script>
 		
 		<!-- allow external style sheets to be loaded into SVG diagrams -->
-		<script type="text/javascript" src="node_modules/svg-injector/svg-injector.js"></script>
-		<script type="text/javascript" src="inject_me.js"></script>
+		<script type="text/javascript" src="lib/js/svg-injector.min.js"></script>
+		<script type="text/javascript" src="assets/inject_me.js"></script>
 
 	</body>
 </html>
